--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 Flask==2.2.5
 flask-cors==4.0.0
+flask-bcrypt==1.0.1
+flask-jwt-extended==4.5.3
+PyJWT==2.8.0
 pymongo==4.6.0
 python-dotenv==1.0.0
 requests==2.31.0
@@ -11,4 +14,3 @@ openpyxl==3.1.2
 geopy==2.4.1
 gunicorn==21.2.0
 flask-mongoengine==1.0.0
-
